--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p> Et voilà le texte de la page</p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
-<a href= "http://www.wildcodeschool.com"> titre du lien </a>
-<img src= "https://res.cloudinary.com/wildcodeschool/image/upload/c_fill,h_50/v1/static/irjoy97aq0eol8bf6959">
+<a href= "http://www.wildcodeschool.com"> La wild </a>
+<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTO9wzUHI--94ioN7HU3evkO6kVD50gEST9FQ&s">
 </body> 
 </html>
